Fixed shader not found error in 4.25

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ WindMaterial/Intermediate/
 *.ini
 WindMaterial/Saved/Logs/
 WindMaterial/Saved/
+WindMaterial/Binaries/Win64/UE4Editor-WindMaterial.pdb
